--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-cayman
+
+
+title: TechStart Portfolio
+
+description: This is Tom's TechStart project page full of my awesome work!
